# modest

./: .gitignore  Dockerfile  README.md  graders.py  inference.py  models.py  openenv.yaml  preprocess.py  pyproject.toml  requirements.txt
data/: comments.json
env/: environment.py  models.py
env_old/: models.py
server/: app.py  modest_environment.py
tasks/: __init__.py  easy.py  hard.py  medium.py
